--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,10 +2,9 @@ version: '3.3'
 
 services:
   event-server:
-    image: kvarc/event_server:latest
+    image: kvarc/server-cmd:latest
     ports:
       - 1514:1514/udp
-      - 8080:8080
     container_name: event-server
   event-client:
     image: kvarc/event_client:latest
